--- a/src/components/DashBoard/dash.module.scss
+++ b/src/components/DashBoard/dash.module.scss
@@ -1,24 +1,57 @@
 .Dash{
-h1{
-    font-weight: 800;
-    font-size: 36px;
-    line-height: 42px;
-    letter-spacing: 0.03em;
-    color: #333333;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    h1{
+        font-weight: 800;
+        font-size: 36px;
+        line-height: 42px;
+        letter-spacing: 0.03em;
+        color: #333333;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
-    .banner6{
-        background: #FFFFFF;
-        border-radius: 15px;
+    .items{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+        div{
+            background: #FFFFFF;
+            border-radius: 15px;
+            padding: 20px;
+            margin-bottom: 10px;
+            min-width: 250px
+            img{
+                width: 200px;
+            }
+            h3{
+                text-align: center;
+                font-weight: 800;
+                font-size: 16px;
+                line-height: 19px;
+                letter-spacing: 0.03em;
+                color: #333333;
+                margin: 20px 0;
+            }
+            p{
+                text-align: center;
+                font-weight: 500;
+                font-size: 14px;
+                line-height: 16px;
+                color: #333333;
+                margin: 0;
+                &[data-value]{
+                    color: #909ADE;
+                    margin-top: 10px;
+                }
+            }
+            div{
+                font-weight: 900;
+                font-size: 36px;
+                line-height: 42px;
+                color: #DDE2E6;
+                text-align: center;
+            }
+        }
     }
-
-
-
-
-
-
-
-
 }
