--- a/src/components/DashBoard/dash.module.scss
+++ b/src/components/DashBoard/dash.module.scss
@@ -20,7 +20,7 @@
             border-radius: 15px;
             padding: 20px;
             margin-bottom: 10px;
-            min-width: 250px
+            min-width: 250px;
             img{
                 width: 200px;
             }
